# data-streaming

./: README.md
.dev/: docker-compose.yaml
.dev/grafana/dashboards/: kafka_broker_disk_usage.json  kafka_broker_performance.json  kafka_broker_topics.json  kafka_cluster_healthcheck.json
.dev/grafana/provisioning/dashboards/: kafka.yaml
.dev/grafana/provisioning/datasources/: datasource.yaml
.dev/jmx/: config.yaml
.dev/prometheus/: config.yml
data-schemas/: README.md
kafka/: README.md  docker-compose.yaml  pyproject.toml
kafka/app/: __init__.py  main.py
kafka/app/controller/: admin.py  topic.py
kafka/app/core/config/: kafka.py  settings.py
kafka/app/data/: consumer.py  producer.py
kafka/app/exceptions/: base.py  kafka.py
kafka/app/model/: purchase.py
