[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Natan Nascimento", email = "natanascimentom@outlook.com"},
]
dependencies = [
    "confluent-kafka>=2.3.0",
    "requests>=2.31.0",
    "pydantic>=2.5.1",
    "Faker>=20.0.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = {call = "app.main:start"}
