[project]
name = "kafka"
version = "0.1.0"
description = "Using kafka to produce and consume data"
authors = [
    {name = "Natan Nascimento", email = "natanascimentom@outlook.com"},
]
dependencies = [
    "confluent-kafka>=2.3.0",
    "requests>=2.31.0",
    "pydantic>=2.5.1",
    "Faker>=20.0.3",
    "pydantic-avro>=0.6.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = {call = "app:start"}
